# NPS

./: .gitignore  CMakeLists.txt  plans.md
include/: build_manager.h  cli.h  debug_manager.h  executor_manager.h  gui.h  parser.h
include/cmd/: commandline.h
include/config/: generate_config.h
resources/config/: build.conf
src/: main.cpp
src/builder/: build_manager.cpp  debug_manager.cpp  generate_config.cpp
src/cli/: cli_dev.cpp  commandline.cpp
src/executor/: executor_manager.cpp
src/gui/: main_gui.cpp
src/parser/: config_parser.cpp
